--- a/PartyRock/Base.lproj/Main.storyboard
+++ b/PartyRock/Base.lproj/Main.storyboard
@@ -153,22 +153,53 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nGb-mS-Sl3">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="184"/>
+                                <rect key="frame" x="0.0" y="60" width="375" height="150"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="184" id="ojR-Bv-aGS"/>
+                                    <constraint firstAttribute="height" constant="150" id="ojR-Bv-aGS"/>
                                 </constraints>
                             </webView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J3o-eb-oeP">
+                                <rect key="frame" x="36" y="257" width="303" height="71"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="71" id="Pgz-G4-8pX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="StillTime-Regular" family="Still Time" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b95-IT-mOM">
+                                <rect key="frame" x="16" y="20" width="69" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="69" id="V7X-sy-c5E"/>
+                                    <constraint firstAttribute="height" constant="30" id="cce-MY-Lio"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="&lt;"/>
+                                <connections>
+                                    <segue destination="zRs-2i-Uz6" kind="unwind" unwindAction="unwindToMainVCWithSegue:" id="8vf-hP-IUx"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.87761516039999998" green="0.87761516039999998" blue="0.87761516039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="b95-IT-mOM" firstAttribute="top" secondItem="Ka4-kz-UDA" secondAttribute="bottom" id="1ic-Ib-Hqx"/>
+                            <constraint firstItem="J3o-eb-oeP" firstAttribute="top" secondItem="nGb-mS-Sl3" secondAttribute="bottom" constant="47" id="63Q-av-ZbY"/>
                             <constraint firstAttribute="trailing" secondItem="nGb-mS-Sl3" secondAttribute="trailing" id="8Wi-yL-a70"/>
                             <constraint firstItem="nGb-mS-Sl3" firstAttribute="leading" secondItem="h8c-IU-Dud" secondAttribute="leading" id="8Zx-DV-dFP"/>
-                            <constraint firstItem="nGb-mS-Sl3" firstAttribute="top" secondItem="h8c-IU-Dud" secondAttribute="top" id="AOB-NJ-Q1t"/>
+                            <constraint firstItem="nGb-mS-Sl3" firstAttribute="top" secondItem="h8c-IU-Dud" secondAttribute="top" constant="60" id="AOB-NJ-Q1t"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="J3o-eb-oeP" secondAttribute="trailing" constant="20" id="iLK-DT-ncz"/>
+                            <constraint firstItem="J3o-eb-oeP" firstAttribute="leading" secondItem="h8c-IU-Dud" secondAttribute="leadingMargin" constant="20" id="lmo-dL-d6T"/>
+                            <constraint firstItem="b95-IT-mOM" firstAttribute="leading" secondItem="h8c-IU-Dud" secondAttribute="leadingMargin" id="reZ-cI-2zE"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="titleLbl" destination="J3o-eb-oeP" id="G7e-6V-c8z"/>
+                        <outlet property="webView" destination="nGb-mS-Sl3" id="dQX-Op-hqN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vrZ-bM-NEJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="zRs-2i-Uz6" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="573.60000000000002" y="-9.4452773613193415"/>
         </scene>
